# tb-progression-transcriptome-meta

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.md  Makefile  README.md  make.cmd  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  hf-space.yml  kaggle.yml  pages.yml  weekly.yml
app/: streamlit_app.py
configs/: config.yaml
data/registry/: local_geo_inventory.json  local_geo_inventory_summary.csv  registry_curated.csv  registry_raw.csv  registry_real_subset.csv
deploy/huggingface_space/: README.md  app.py  requirements.txt
docs/: next_research_roadmap.md  submission_ready_package.md
kaggle/: kernel-metadata.json
kaggle/notebook/: tbmeta_kaggle_training.ipynb
manuscripts/: manuscript.md  references.bib  supplementary_methods.md
pipelines/: run_pipeline.py
results/advanced_analysis/: advanced_analysis_report.md  advanced_manuscript_draft.md  bayesian_gene_meta.csv  bayesian_pathway_cohort_effects.csv  (+7 more)
scripts/: audit_longitudinal_trajectory_feasibility.py  build_advanced_submission_assets.py  build_bmc_med_genomics_advanced_package.py  build_ijtb_submission_assets.py  build_longitudinal_submission_assets.py  build_submission_ready_assets.py  build_tuberculosis_longitudinal_package.py  citations.py  publish_hf_space.ps1  publish_kaggle.ps1  remap_gse79362_to_gene_level.py  run_advanced_tb_analysis.py  run_gse79362_sensitivity_analysis.py  run_longitudinal_tb_analysis.py  run_omicsclaw_extensions.py  validate_ijtb_package.py
tests/: test_gene_mapping.py  test_loco_pipeline.py  test_meta_analysis.py  test_registry_schema.py
(+140 files in other folders)
